# feather

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  pre-build.cmake
assets/shaders/: bounds.frag  bounds.frag.spv  compile.bat  grayscale.frag  grayscale.frag.spv  grid.frag  grid.vert.spv  gridPlane.frag  gridPlane.frag.spv  gridPlane.vert  gridPlane.vert.spv  shader.frag  shader.vert  shape.frag  shape.frag.spv  shape.vert  sprite.frag  sprite.frag.spv  sprite.vert  sprite.vert.spv  sprite_frag.spv  sprite_vert.spv  ui.frag  ui.frag.spv  ui.vert  ui.vert.spv
configs/: cursors.yaml  feather.ini  imgui.ini  samplers.yaml  textures.yaml
server/: CMakeLists.txt  Server.cpp  Server.h  server_main.cpp
src/engine/animation/: SpriteAnimator.cpp  SpriteAnimator.h
src/engine/animation/tweening/: Tweener.cpp  Tweener.h
src/engine/api/: Engine.cpp  Engine.h
src/engine/assets/icons/: icon.ase
src/engine/audio/: AudioBackend.h  AudioEngine.cpp  AudioEngine.h
src/engine/audio/backends/: MiniAudioBackend.cpp  MiniAudioBackend.h
src/engine/common/: Assets.cpp  Assets.h  Color.cpp  Color.h  Config.cpp  Config.h  Rect.cpp  Rect.h  Utils.h  structs.h
src/engine/components/: Components.h
src/engine/core/: Time.h
src/engine/editor/: Editor.cpp  Editor.h  EditorDraw.cpp  EditorDraw.h
src/engine/editor/panels/: DebugLogPanel.cpp  DebugLogPanel.h  EngineStatusPanel.cpp  EngineStatusPanel.h  EntitiesPanel.cpp  EntitiesPanel.h  InspectorPanel.cpp  InspectorPanel.h  NetworkingPanel.cpp  NetworkingPanel.h  ProfilerPanel.cpp  ProfilerPanel.h  RaycastPanel.cpp  RaycastPanel.h  TweenPanel.cpp  TweenPanel.h  ViewportPanel.cpp  ViewportPanel.h  WorldEditorPanel.cpp  WorldEditorPanel.h
src/engine/entities/: ECS.cpp  ECS.h
src/engine/input/: Input.cpp  Input.h  Mouse.cpp  Mouse.h
src/engine/networking/: NetClient.cpp  NetClient.h
src/engine/prefabs/: Prefab.cpp  Prefab.h
src/engine/profiling/: Logger.cpp  Logger.h
src/engine/rendering/: Camera.cpp  Camera.h  ImGuiRenderer.cpp  ImGuiRenderer.h  Samplers.cpp  Samplers.h  Shader.cpp  Shader.h  SpriteAtlas.cpp  SpriteAtlas.h  SpriteBatcher.cpp  SpriteBatcher.h  Texture.cpp  Texture.h  Window.cpp  Window.h
src/engine/rendering/shapes/: Shape.cpp  Shape.h  Vertex.h
src/engine/rendering/vulkan/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommon.h  VulkanDevice.cpp  VulkanDevice.h  VulkanEngine.cpp  VulkanEngine.h  VulkanImage.cpp  VulkanImage.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanPipelineBuilder.cpp  VulkanPipelineBuilder.h  VulkanSwapchain.cpp  VulkanSwapchain.h
src/engine/rendering/vulkan/descriptors/: VulkanDescriptorPool.cpp  VulkanDescriptorPool.h  VulkanDescriptorSetLayout.cpp  VulkanDescriptorSetLayout.h  VulkanDescriptorWriter.cpp  VulkanDescriptorWriter.h
src/engine/scenes/: Scene.h
src/engine/systems/: AreaSystem.cpp  AreaSystem.h  CollisionSystem.cpp  CollisionSystem.h  DragSystem.cpp  DragSystem.h  GravitySystem.cpp  GravitySystem.h  QuadTree.cpp  QuadTree.h  SpriteRenderSystem.cpp  SpriteRenderSystem.h
src/engine/text/: TextEngine.cpp  TextEngine.h
src/engine/world/: IsometricGrid.cpp  IsometricGrid.h
tests/: CMakeLists.txt  test_main.cpp  test_rect.h
